--- a/Weatherizer/app/src/main/res/values/strings.xml
+++ b/Weatherizer/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Weatherizer</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="allow_location">Allow location</string>
+    <string name="search_country">Enter a city name here</string>
+    <string name="search">Search</string>
 </resources>
